Dark mode introduced, Timeline play pause fixed, Fix blogs width

--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -4,20 +4,27 @@
 /*font-family: Gilroy, serif;*/
 /*}*/
 
-.vis-item-content {
-    color: #161f38;
-}
 
 .vis-item.vis-selected {
-    border-color: black !important;
-    background-color: #dcdcdc !important;
+    border-color: yellow !important;
+    background-color: black !important;
+    color: white !important;
     z-index: 2;
+}
+
+.light-theme-node {
+    background-color: white !important;
+    color: #161f38 !important;
+}
+
+.dark-theme-node {
+    background-color: black !important;
+    color: white !important;
 }
 
 .vis-item.internship {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: white;
     border-color: #c72c41;
     padding: 5px;
     opacity: 1;
@@ -28,7 +35,6 @@
 .vis-item.internship-indicator {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: white;
     border-color: #c72c41;
     padding: 5px;
 }
@@ -36,7 +42,6 @@
 .vis-item.project {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: white;
     border-color: rgb(144, 126, 81);
     padding: 5px;
     opacity: 1;
@@ -47,7 +52,6 @@
 .vis-item.project-indicator {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: white;
     border-color: rgb(144, 126, 81);
     padding: 5px;
 }
@@ -55,7 +59,6 @@
 .vis-item.volunteer {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: white;
     border-color: #29a19c;
     padding: 5px;
     opacity: 1;
@@ -66,7 +69,6 @@
 .vis-item.volunteer-indicator {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: white;
     border-color: #29a19c;
     padding: 5px;
 }
@@ -74,7 +76,6 @@
 .vis-item.certification {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: white;
     border-color: #b030b0;
     padding: 5px;
     opacity: 1;
@@ -85,7 +86,6 @@
 .vis-item.certification-indicator {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: white;
     border-color: #b030b0;
     padding: 5px;
 }
@@ -93,7 +93,6 @@
 .vis-item.hackathon {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: white;
     border-color: #3b2c85;
     padding: 5px;
     opacity: 1;
@@ -104,7 +103,6 @@
 .vis-item.hackathon-indicator {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: white;
     border-color: #3b2c85;
     padding: 5px;
 }
@@ -112,14 +110,17 @@
 .vis-item.event {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: white;
     border-color: rgb(144, 126, 81);
     padding: 5px;
 }
 
-.vis-time-axis .vis-text {
-    color: #161f38 !important;
+.vis-panel.vis-bottom {
+    color: black;
     font-weight: bold !important;
+}
+
+.vis-time-axis .vis-text {
+    color: unset !important;
 }
 
 .no-end {
@@ -128,26 +129,62 @@
 
 .vis-item.vis-background.eleven-standard {
     background-color: rgba(255, 255, 255, 0.5);
+    color: black;
 }
 
 .vis-item.vis-background.twelve-standard {
     background-color: rgba(249, 249, 249, 0.5);
+    color: black;
 }
 
 .vis-item.vis-background.first-year {
     background-color: rgba(255, 255, 255, 0.5);
+    color: black;
 }
 
 .vis-item.vis-background.second-year {
     background-color: rgba(249, 249, 249, 0.5);
+    color: black;
 }
 
 .vis-item.vis-background.third-year {
     background-color: rgba(255, 255, 255, 0.5);
+    color: black;
 }
 
 .vis-item.vis-background.fourth-year {
     background-color: rgba(249, 249, 249, 0.5);
+    color: black;
+}
+
+.vis-item.vis-background.eleven-standard-dark {
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+}
+
+.vis-item.vis-background.twelve-standard-dark {
+    background-color: rgba(27, 27, 27, 0.9);
+    color: white;
+}
+
+.vis-item.vis-background.first-year-dark {
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+}
+
+.vis-item.vis-background.second-year-dark {
+    background-color: rgba(27, 27, 27, 0.9);
+    color: white;
+}
+
+.vis-item.vis-background.third-year-dark {
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+}
+
+.vis-item.vis-background.fourth-year-dark {
+    background-color: rgba(27, 27, 27, 0.9);
+    color: white;
 }
 
 .indicator {
@@ -192,6 +229,10 @@
 
 .timeline-stripes {
     background: repeating-linear-gradient(45deg, #fff, #fff 5px, #f0f0f0 0, #f0f0f0 10px);
+}
+
+.timeline-stripes-dark {
+    background: repeating-linear-gradient(45deg, #000, #000 5px, #2B2B2B 0, #2B2B2B 10px);
 }
 
 .timeline-play-instruction {
